--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <svg id="background"></svg>
     <svg id="globe"></svg>
     <div class="report-button" onclick="window.open('https://typst.app/project/rtDoi493RhAi-UNeQOQk5h', '_blank')">Project Report</div>
-    <div class="chart-button" onclick="window.open('https://your-3d-pie-chart-url', '_blank')">3D Pie Chart</div>
+    <div class="chart-button" onclick="window.open('https://straywolf07.github.io/Audio-files/piechart.html', '_blank')">3D Pie Chart</div>
     <div class="sociosync-label">SocioSync</div>
     <button class="play-button" onclick="toggleAudio()">Play Music</button>
     <audio id="background-music" loop>
