--- a/index.html
+++ b/index.html
@@ -204,7 +204,54 @@
         const countryData = {
             "England": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
             "Germany": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
-            "USA": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 }
+            "USA": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Italy": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Canada": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Japan": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "China": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "France": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Spain": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "South Korea": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Switzerland": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Australia": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Netherlands": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Austria": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Belgium": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Singapore": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Sweden": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "India": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Turkey": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Brazil": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Israel": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Taiwan": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Denmark": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Portugal": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Greece": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Iran": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Poland": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Romania": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Mexico": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "New Zealand": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Finland": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Russia": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Saudi Arabia": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Norway": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Malasiya": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Slovenia": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Argentina": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Chile": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Czech Republic": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Hungary": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Ireland": { publications: 470, publicationsFill: 75, percentage: 40, percentageFill: 40, tlcs: 30, tlcsFill: 30, tgcs: 42856, tgcsFill: 60 },
+            "Cyprus": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Egypt": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Serbia": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Slovakia": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Columbia": { publications: 63, publicationsFill: 63, percentage: 30, percentageFill: 30, tlcs: 35, tlcsFill: 35, tgcs: 47, tgcsFill: 47 },
+            "Croatia": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Thailand": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "Pakistan": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 },
+            "UAE": { publications: 1929, publicationsFill: 80, percentage: 60, percentageFill: 60, tlcs: 40, tlcsFill: 40, tgcs: 42856, tgcsFill: 80 }
         };
 
         const backgroundMusic = document.getElementById('background-music');
